# mcp-cli

./: .env.example  .gitignore  README.md  chat_handler.py  config.py  license.md  llm_client.py  main.py  mcp_cli.py  mcp_config.json  pyproject.toml  server_config.json  stdio_client.py  stdio_server_parameters.py  stdio_server_shutdown.py  test.py  tools_handler.py
messages/: json_rpc_message.py  prompts.py  resources.py  send_initialize_message.py  send_message.py  send_ping_message.py  tools.py
scripts/: mcp-cli
src/mcpcli/: __main__.py  chat_handler.py  config.py  llm_client.py  test.py  tools_handler.py
src/mcpcli/cli/: __main__.py
src/mcpcli/messages/: json_rpc_message.py  ping.py  prompts.py  resources.py  send_call_tool.py  send_initialize_message.py  send_message.py  send_ping.py  send_prompts.py  send_resources.py  send_tools_list.py  tools.py
src/mcpcli/messages/message_types/: incrementing_id_message.py  initialize_message.py  ping_message.py  prompts_message.py  prompts_messages.py  resources_message.py  tools_call_message.py  tools_list_message.py  tools_messages.py
src/mcpcli/messages/tests/: test_initialize.py  test_json_rpc_message.py  test_ping.py
src/mcpcli/scripts/: connection_check.py
src/mcpcli/tests/messges/: test_prompts.py  test_resources.py  test_tools.py
src/mcpcli/transport/stdio/: stdio_client.py
transport/stdio/: stdio_client.py
